--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,15 +22,24 @@ body {
 		background-position: 0% 50%;
 	}
 }
-.ImageFont{
+.Div_Font{
   position: fixed;
-  opacity: 0.6;
   top: 50%;
   left: 50%;
-  transform: translate(-50%,-50%);
-
 }
-
+#PicFont{
+	transition: all 0.5s ease;
+	opacity: 0.4;
+	transform: translate(-50%,-50%);
+}
+ #PicFont:hover{
+	transition: all 0.5s ease;
+	opacity: 0.7;	
+}
+#NavBarCl{
+	background-color: #147396;
+	
+}
 
   
 
