--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,9 +7,10 @@
 body {
 	
   background: linear-gradient(-45deg, #023859, #081B26, #23a6d5, #23d5abba);
-	background-size: 400% 400%;
+	background-size: 1000% 1000%;
 	animation: gradient 15s ease infinite;
 	height: 100vh;
+	
 }
 
 @keyframes gradient {
@@ -120,12 +121,6 @@ body {
 	background-image: url("https://res.cloudinary.com/dmsoej29n/image/upload/v1684622158/ImaExa/LogoFacebook_bjt5iq.png");
 	background-size: cover;
 }
-.google-plus span {
-	background-color: #db5a3c;
-}
-.tumblr span {
-	background-color: #34526f;
-}
 
 .instagram span {
 	background-color: #a32e9d;
@@ -138,6 +133,7 @@ body {
 	background-image: url("https://res.cloudinary.com/dmsoej29n/image/upload/v1684627844/ImaExa/LogoWhatsapp_otay51.png");
 	background-size: cover;
 }
+
 
 .twitter{
 	background-image: url("https://res.cloudinary.com/dmsoej29n/image/upload/v1684619041/ImaExa/twitterlogo_hdjbur.png");
@@ -184,9 +180,7 @@ body {
 
 	  padding: 10px;
   }
-  .pinterest {
-   display: none; 
-  }
+  
 
 }
 #Div_Social{
@@ -194,4 +188,8 @@ body {
 	top: 40px;
 }
   
+html{
+	scroll-behavior: smooth;
+}
+
 
